--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,11 @@
 .search-label{
   color: #323132;
 }
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #58595B;
+  text-align: center;
+}
